# django-appmail

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  mypy.ini  pyproject.toml  requirements.txt  settings.py  setup.py  tox.ini  urls.py
.github/workflows/: tox.yml
appmail/: CHANGELOG.md  __init__.py  admin.py  apps.py  forms.py  helpers.py  models.py  readme.md  settings.py  tests.py  urls.py  views.py
appmail/management/commands/: truncate_logged_messages.py
appmail/migrations/: 0001_initial.py  0002_add_template_description.py  0003_emailtemplate_test_context.py  0004_emailtemplate_is_active.py  0005_emailtemplate_from_email__reply_to.py  0006_emailtemplate_supports_attachments.py  0007_loggedemailmessage.py  0008_add_logged_message_covering_search_index.py  0008_add_logged_message_indexes.py
appmail/templates/: base.html
appmail/templates/admin/appmail/: change_form.html
appmail/templates/admin/appmail/emailtemplate/: change_form.html
appmail/templates/admin/appmail/loggedmessage/: change_form.html  template_name_filter.html
appmail/templates/appmail/: send_test_email.html  send_test_emails.html
appmail/tests/: test_forms.py  test_helpers.py  test_models.py  test_views.py
appmail/tests/fixtures/: templates.json
tests/: __init__.py  settings.py  test_forms.py  test_helpers.py  test_models.py  test_views.py  urls.py
