[tool.poetry]
name = "django-appmail"
version = "2.0b7"
description = "Django app for managing localised email templates."
authors = ["YunoJuno <code@yunojuno.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [{ include = "appmail" }]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"

[tool.poetry.dev-dependencies]
black = { version="*", allow-prereleases=true }
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pylint-django = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
