[tool.poetry]
name = "django-appmail"
version = "4.0"
description = "Django app for managing localised email templates."
authors = ["YunoJuno <code@yunojuno.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yunojuno/django-appmail"
repository = "https://github.com/yunojuno/django-appmail"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "appmail" }]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2 || ^4.0"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
freezegun = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
