[tool.poetry]
name = "django-appmail"
version = "7.0"
description = "Django app for managing localised email templates."
authors = ["YunoJuno <code@yunojuno.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yunojuno/django-appmail"
repository = "https://github.com/yunojuno/django-appmail"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.2",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "appmail" }]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2 || ^5.0"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
freezegun = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[tool.poetry.group.dev.dependencies]
tox = "^4.26.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
